# conformity-migration-tool

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  cloud_accounts.py  config.yml  main.py  models.py  requirements.txt  service.py  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  codeql-analysis.yml  release.yaml
requirements/: typing.txt
src/conformity_migration/: cloud_accounts.py  conformity_api.py  models.py  service.py
src/conformity_migration_tool/: aws_cli.py  cli.py  config.yml  di.py
